added loading circle

--- a/movies.html
+++ b/movies.html
@@ -9,9 +9,16 @@
     <link rel="stylesheet" href="css/movies.css">
 </head>
 <body>
-<script src="https://code.jquery.com/jquery-2.2.4.min.js"
-        integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-        crossorigin="anonymous"></script>
+    <div class="container-fluid loading-container">
+        <div class="loading hidden">
+            <div class="spinner-grow text-warning" role="status" style="height: 500px; width: 500px">
+                <span class="sr-only">Loading...</span>
+            </div>
+        </div>
+    </div>
+
+
+<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 <script src="js/movies.js"></script>
 </body>
 </html>
