--- a/movies.html
+++ b/movies.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="css/movies.css">
 </head>
 <body>
+    <nav class="navbar">
+        <a class="navbar-brand" href="#">Movie Application</a>
+        <button class="btn" data-toggle="modal" data-target="#addModal">Add a Movie</button>
+    </nav>
     <div class="container-fluid loading-container">
         <div class="loading hidden">
             <div class="spinner-grow text-warning" role="status" style="height: 500px; width: 500px">
@@ -16,6 +20,11 @@
             </div>
         </div>
     </div>
+<!--    container -->
+    <div class="movie-container">
+        <div class="row main-row"></div>
+    </div>
+
 
 
 <!--<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>-->
