--- a/movies.html
+++ b/movies.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Movie Application</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
           crossorigin="anonymous">
     <link rel="stylesheet" href="css/movies.css">
 </head>
 <body>
     <nav class="navbar">
         <a class="navbar-brand" href="#">Movie Application</a>
-        <button class="btn" data-toggle="modal" data-target="#addModal">Add a Movie</button>
+        <button class="btn" data-toggle="clip" data-target="#addClip">Add a Movie</button>
     </nav>
     <div class="container-fluid loading-container">
         <div class="loading hidden">
@@ -24,6 +24,10 @@
     <div class="movie-container">
         <div class="row main-row"></div>
     </div>
+
+    <div class="modal-container"></div>
+
+
 
 
 
