--- a/movies.html
+++ b/movies.html
@@ -9,13 +9,14 @@
     <link rel="stylesheet" href="css/movies.css">
 </head>
 <body>
-    <nav class="navbar">
+
+    <nav class="navbar navbar-light">
         <a class="navbar-brand" href="#">Movie Application</a>
-        <button class="btn" data-toggle="modal" data-target="#addModel">Add a Movie</button>
+        <button class="btn btn-success" data-toggle="modal" data-target="#addModal">Add a Movie</button>
     </nav>
     <div class="container-fluid loading-container">
         <div class="loading hidden">
-            <div class="spinner-grow text-warning" role="status" style="height: 500px; width: 500px">
+            <div class="spinner-grow text-warning" role="status" style="height: 500px; width: 600px">
                 <span class="sr-only">Loading...</span>
             </div>
         </div>
@@ -27,16 +28,16 @@
 
     <div class="modal-container"></div>
     <div class="modal fade" id="addModal" tabindex="-1" role="dialog" aria-labelledby="addModal" aria-hidden="true">
-        <div class="model-dialog" role="document">
-            <div class="modL-header">
-                <h5 class="modal-name" id="modalAdd">Add a new Movie<</h5>
+        <div class="modal-dialog" role="document">
+            <div class="modal-header">
+                <h5 class="modal-title" id="addAModal">Add a new Movie</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label='Close'>
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
                 <input id="addTitle" type="text" class="form-control mb-2 mr-sm-2" placeholder="Title">
-                <input id="addYear" type="text" class="'form-control mb-2 mr-sm-2" placeholder="Year it was released">
+                <input id="addYear" type="text" class="form-control mb-2 mr-sm-2" placeholder="Year it was released">
                 <input id="addGenre" type="text" class="form-control mb-2 mr-sm-2" placeholder="Genre">
 
                 <div class="input-group mb-2 mr-sm-2">
